--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,6 +5,8 @@ permalink: /teaching/
 author_profile: true
 ---
 I enjoy teaching as much as research and have always striven to build a classroom based on equity and respect. Further, I value problem-based learning to trigger intellectual curiosity and critical thinking in my students. A summary of my teaching activities is provided below.
+* fMRI: From Theory to Practice, Ruhr University Bochum, 2022 – present
+
 {% include base_path %}
 
 {% for post in site.teaching reversed %}
