--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -9,6 +9,11 @@ author_profile: true
   <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
 {% endif %}
 
+
+---
+can I add stuff here?
+---
+
 {% include base_path %}
 
 <!-- New style rendering if publication categories are defined -->
