--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -10,8 +10,9 @@ author_profile: true
 {% endif %}
 
 
-====
-====
+Ahmadi, K., Pouretemad, H. R., Esfandiari, J., Yoonessi, A., & Yoonessi, A. (2015). Psychophysical evidence for impaired Magno, Parvo, and Konio-cellular pathways in dyslexic children. Journal of Ophthalmic & Vision Research, 10(4), 433.
+
+Esfandiari, J., Razavizadeh, S., & Stenner, M.-P. (2022). Can moving in a redundant workspace accelerate motor adaptation? Journal of Neurophysiology, 128(6), 1634–1645.
 
 {% include base_path %}
 
