--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,9 +5,8 @@ permalink: /publications/
 author_profile: true
 ---
 
-{% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
-{% endif %}
+<b>Journals</b>
+2024
 
 
 Ahmadi, K., Pouretemad, H. R., Esfandiari, J., Yoonessi, A., & Yoonessi, A. (2015). Psychophysical evidence for impaired Magno, Parvo, and Konio-cellular pathways in dyslexic children. Journal of Ophthalmic & Vision Research, 10(4), 433.
