--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,13 +5,23 @@ permalink: /publications/
 author_profile: true
 ---
 
-<b>Journals</b>
-2024
+<h1>Main Headline (h1)</h1>
+    <p>This is a paragraph under the main headline.</p>
 
+    <h2>Subheading 1 (h2)</h2>
+    <p>This is some content under the first subheading.</p>
 
-Ahmadi, K., Pouretemad, H. R., Esfandiari, J., Yoonessi, A., & Yoonessi, A. (2015). Psychophysical evidence for impaired Magno, Parvo, and Konio-cellular pathways in dyslexic children. Journal of Ophthalmic & Vision Research, 10(4), 433.
+    <h3>Subheading 2 (h3)</h3>
+    <p>This is some content under the second subheading.</p>
 
-Esfandiari, J., Razavizadeh, S., & Stenner, M.-P. (2022). Can moving in a redundant workspace accelerate motor adaptation? Journal of Neurophysiology, 128(6), 1634–1645.
+    <h4>Sub-subheading (h4)</h4>
+    <p>This is some content under the sub-subheading.</p>
+
+    <h5>Lower-level heading (h5)</h5>
+    <p>This is content under a lower-level heading.</p>
+
+    <h6>Lowest-level heading (h6)</h6>
+    <p>This is content under the lowest-level heading.</p>
 
 {% include base_path %}
 
