--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,23 +5,15 @@ permalink: /publications/
 author_profile: true
 ---
 
-<h1>Main Headline (h1)</h1>
-    <p>This is a paragraph under the main headline.</p>
+<h1>Journals</h1>
+<p>This is a paragraph under the main headline.</p>
 
-    <h2>Subheading 1 (h2)</h2>
-    <p>This is some content under the first subheading.</p>
+<h2>paper1 </h2>
+<p>This is some content under the first subheading.</p>
 
-    <h3>Subheading 2 (h3)</h3>
-    <p>This is some content under the second subheading.</p>
+<h2>paper2</h2>
+<p>This is some babababbaba under the first subheading.</p>
 
-    <h4>Sub-subheading (h4)</h4>
-    <p>This is some content under the sub-subheading.</p>
-
-    <h5>Lower-level heading (h5)</h5>
-    <p>This is content under a lower-level heading.</p>
-
-    <h6>Lowest-level heading (h6)</h6>
-    <p>This is content under the lowest-level heading.</p>
 
 {% include base_path %}
 
