--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -6,10 +6,9 @@ author_profile: true
 ---
 
 <h1>Journals</h1>
-<p>This is a paragraph under the main headline.</p>
 
-<h2>paper1 </h2>
-<p>This is some content under the first subheading.</p>
+<h2>2024</h2>
+<p>Ahmadi, K., Pereira, J. B., van Westen, D., Pasternak, O., Zhang, F., Nilsson, M., ... & Hansson, O. (2024). Fixel-based analysis reveals tau-related white matter changes in early stages of Alzheimer's disease. Journal of Neuroscience, 44(18).</p>
 
 <h2>paper2</h2>
 <p>This is some babababbaba under the first subheading.</p>
