--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -8,7 +8,7 @@ author_profile: true
 <h1>Journals</h1>
 
 <h2>2024</h2>
-<p>Ahmadi, K., Pereira, J. B., van Westen, D., Pasternak, O., Zhang, F., Nilsson, M., ... & Hansson, O. (2024). Fixel-based analysis reveals tau-related white matter changes in early stages of Alzheimer's disease. Journal of Neuroscience, 44(18).</p>
+<p><b>Ahmadi, K.</b>, Pereira, J. B., van Westen, D., Pasternak, O., Zhang, F., Nilsson, M., ... & Hansson, O. (2024). Fixel-based analysis reveals tau-related white matter changes in early stages of Alzheimer's disease. Journal of Neuroscience, 44(18).<a href="https://www.jneurosci.org/content/44/18/e0538232024.abstract">Paper</a></p>
 
 <h2>paper2</h2>
 <p>This is some babababbaba under the first subheading.</p>
