--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -13,6 +13,8 @@ author_profile: true
 <h2>paper2</h2>
 <p>This is some babababbaba under the first subheading.</p>
 
+<h1>Conferences</h1>
+
 
 {% include base_path %}
 
