--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -8,10 +8,10 @@ author_profile: true
 <h1>Journals</h1>
 
 <h2>2024</h2>
-<p><b>Ahmadi, K.</b>, Pereira, J. B., van Westen, D., Pasternak, O., Zhang, F., Nilsson, M., ... & Hansson, O. (2024). Fixel-based analysis reveals tau-related white matter changes in early stages of Alzheimer's disease. Journal of Neuroscience, 44(18).<a href="https://www.jneurosci.org/content/44/18/e0538232024.abstract">Paper</a></p>
+<p><b>Ahmadi K</b>, Pereira JB, van Westen D, Pasternak O, Zhang F, Nilsson M, Stomrud E, Spotorno N, Hansson O. Fixel-based analysis reveals tau-related white matter changes in early stages of Alzheimer's disease. Journal of Neuroscience. 2024 May 1;44(18).<a href="https://www.jneurosci.org/content/44/18/e0538232024.abstract"[Paper]</a></p>
 
-<h2>paper2</h2>
-<p>This is some babababbaba under the first subheading.</p>
+<h2>2023</h2>
+<p>Molz B, Herbik A, Baseler HA, de Best P, Raz N, Gouws A, <b>Ahmadi K</b>, Lowndes R, McLean RJ, Gottlob I, Kohl S. Achromatopsia—Visual Cortex Stability and Plasticity in the Absence of Functional Cones. Investigative Ophthalmology & Visual Science. 2023 Oct 3;64(13):23-.<a href="https://iovs.arvojournals.org/article.aspx?articleid=2792930"[Paper]</a></p>
 
 <h1>Conferences</h1>
 
