--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -13,6 +13,9 @@ author_profile: true
 <h2>2023</h2>
 <p>Molz B, Herbik A, Baseler HA, de Best P, Raz N, Gouws A, <b>Ahmadi K</b>, Lowndes R, McLean RJ, Gottlob I, Kohl S. Achromatopsia—Visual Cortex Stability and Plasticity in the Absence of Functional Cones. Investigative Ophthalmology & Visual Science. 2023 Oct 3;64(13):23-.<a href="https://iovs.arvojournals.org/article.aspx?articleid=2792930">[Paper]</a></p>
 
+<p>Cicognola C, Mattsson-Carlgren N, van Westen D, Zetterberg H, Blennow K, Palmqvist S, <b>Ahmadi K</b>, Strandberg O, Stomrud E, Janelidze S, Hansson O. Associations of CSF PDGFRβ with aging, blood-brain barrier damage, Neuroinflammation, and Alzheimer disease pathologic changes. Neurology. 2023 Jul 4;101(1):e30-9.<a href="https://www.neurology.org/doi/full/10.1212/WNL.0000000000207358">[Paper]</a></p>
+
+
 <h1>Conferences</h1>
 
 
