--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -15,6 +15,10 @@ author_profile: true
 
 <p>Cicognola C, Mattsson-Carlgren N, van Westen D, Zetterberg H, Blennow K, Palmqvist S, <b>Ahmadi K</b>, Strandberg O, Stomrud E, Janelidze S, Hansson O. Associations of CSF PDGFRβ with aging, blood-brain barrier damage, Neuroinflammation, and Alzheimer disease pathologic changes. Neurology. 2023 Jul 4;101(1):e30-9.<a href="https://www.neurology.org/doi/full/10.1212/WNL.0000000000207358">[Paper]</a></p>
 
+<p><b>Ahmadi K</b>, Pereira JB, Berron D, Vogel J, Ingala S, Strandberg OT, Janelidze S, Barkhof F, Pfeuffer J, Knutsson L, van Westen D. Gray matter hypoperfusion is a late pathological event in the course of Alzheimer’s disease. Journal of Cerebral Blood Flow & Metabolism. 2023 Apr;43(4):565-80.<a href="https://journals.sagepub.com/doi/full/10.1177/0271678X221141139">[Paper]</a></p>
+
+<h2>2022</h2>
+<p>Molz B, Herbik A, Baseler HA, de Best PB, Vernon RW, Raz N, Gouws AD, <b>Ahmadi K</b>, Lowndes R, McLean RJ, Gottlob I. Structural changes to primary visual cortex in the congenital absence of cone input in achromatopsia. NeuroImage: Clinical. 2022 Jan 1;33:102925.<a href="https://www.sciencedirect.com/science/article/pii/S2213158221003697">[Paper]</a></p>
 
 <h1>Conferences</h1>
 
