--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -20,7 +20,12 @@ author_profile: true
 <h2>2022</h2>
 <p>Molz B, Herbik A, Baseler HA, de Best PB, Vernon RW, Raz N, Gouws AD, <b>Ahmadi K</b>, Lowndes R, McLean RJ, Gottlob I. Structural changes to primary visual cortex in the congenital absence of cone input in achromatopsia. NeuroImage: Clinical. 2022 Jan 1;33:102925.<a href="https://www.sciencedirect.com/science/article/pii/S2213158221003697">[Paper]</a></p>
 
+<h2>2021</h2>
+<p>Puzniak RJ, McPherson B, <b>Ahmadi K</b>, Herbik A, Kaufmann J, Liebe T, Gouws A, Morland AB, Gottlob I, Hoffmann MB, Pestilli F. CHIASM, the human brain albinism and achiasma MRI dataset. Scientific data. 2021 Nov 26;8(1):308.
+<a href="https://www.nature.com/articles/s41597-021-01080-w">[Paper]</a></p>
+
 <h1>Conferences</h1>
+<hr>
 
 
 {% include base_path %}
