--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -24,7 +24,11 @@ author_profile: true
 <p>Puzniak RJ, McPherson B, <b>Ahmadi K</b>, Herbik A, Kaufmann J, Liebe T, Gouws A, Morland AB, Gottlob I, Hoffmann MB, Pestilli F. CHIASM, the human brain albinism and achiasma MRI dataset. Scientific data. 2021 Nov 26;8(1):308.
 <a href="https://www.nature.com/articles/s41597-021-01080-w">[Paper]</a></p>
 
-<p>Lowndes R, Molz B, Warriner L, Herbik A, De Best PB, Raz N, Gouws A, Ahmadi K, McLean RJ, Gottlob I, Kohl S. Structural differences across multiple visual cortical regions in the absence of cone function in congenital achromatopsia. Frontiers in Neuroscience. 2021 Oct 14;15:718958.<a href="https://www.frontiersin.org/journals/neuroscience/articles/10.3389/fnins.2021.718958/full">[Paper]</a></p>
+<p>Lowndes R, Molz B, Warriner L, Herbik A, De Best PB, Raz N, Gouws A, <b>Ahmadi K</b>, McLean RJ, Gottlob I, Kohl S. Structural differences across multiple visual cortical regions in the absence of cone function in congenital achromatopsia. Frontiers in Neuroscience. 2021 Oct 14;15:718958.<a href="https://www.frontiersin.org/journals/neuroscience/articles/10.3389/fnins.2021.718958/full">[Paper]</a></p>
+
+<h2>2020</h2>
+<p>Ahmadi K, Fracasso A, Puzniak RJ, Gouws AD, Yakupov R, Speck O, Kaufmann J, Pestilli F, Dumoulin SO, Morland AB, Hoffmann MB. Triple visual hemifield maps in a case of optic chiasm hypoplasia. NeuroImage. 2020 Jul 15;215:116822.
+<a href="https://www.sciencedirect.com/science/article/pii/S1053811920303098">[Paper]</a></p>
 
 <h1>Conferences</h1>
 <hr>
