--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -32,6 +32,16 @@ author_profile: true
 
 <p>Carvalho J, Invernizzi A, <b>Ahmadi K</b>, Hoffmann MB, Renken RJ, Cornelissen FW. Micro-probing enables fine-grained mapping of neuronal populations using fMRI. Neuroimage. 2020 Apr 1;209:116423.
 <a href="https://www.sciencedirect.com/science/article/pii/S1053811919310146">[Paper]</a></p>
+
+<h2>2019</h2>
+<p><b>Ahmadi K</b>, Herbik A, Wagner M, Kanowski M, Thieme H, Hoffmann MB. Population receptive field and connectivity properties of the early visual cortex in human albinism. Neuroimage. 2019 Nov 15;202:116105.
+<a href="https://www.sciencedirect.com/science/article/abs/pii/S1053811919306962">[Paper]</a></p>
+
+
+
+
+
+
 <h1>Conferences</h1>
 <hr>
 
