--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -37,6 +37,12 @@ author_profile: true
 <p><b>Ahmadi K</b>, Herbik A, Wagner M, Kanowski M, Thieme H, Hoffmann MB. Population receptive field and connectivity properties of the early visual cortex in human albinism. Neuroimage. 2019 Nov 15;202:116105.
 <a href="https://www.sciencedirect.com/science/article/abs/pii/S1053811919306962">[Paper]</a></p>
 
+<p>Eick CM, <b>Ahmadi K</b>, Sweeney-Reed CM, Hoffmann MB. Interocular transfer of visual memory–Influence of visual impairment and abnormalities of the optic chiasm. Neuropsychologia. 2019 Jun 1;129:171-8.
+<a href="https://www.sciencedirect.com/science/article/abs/pii/S0028393218304718">[Paper]</a></p>
+
+<p><b>Ahmadi K</b>, Fracasso A, van Dijk JA, Kruijt C, van Genderen M, Dumoulin SO, Hoffmann MB. Altered organization of the visual cortex in FHONDA syndrome. NeuroImage. 2019 Apr 15;190:224-31.
+<a href="https://www.sciencedirect.com/science/article/abs/pii/S1053811918301605">[Paper]</a></p>
+
 
 
 
