--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -43,6 +43,8 @@ author_profile: true
 <p><b>Ahmadi K</b>, Fracasso A, van Dijk JA, Kruijt C, van Genderen M, Dumoulin SO, Hoffmann MB. Altered organization of the visual cortex in FHONDA syndrome. NeuroImage. 2019 Apr 15;190:224-31.
 <a href="https://www.sciencedirect.com/science/article/abs/pii/S1053811918301605">[Paper]</a></p>
 
+<p>Puzniak RJ, <b>Ahmadi K</b>, Kaufmann J, Gouws A, Morland AB, Pestilli F, Hoffmann MB. Quantifying nerve decussation abnormalities in the optic chiasm. Neuroimage Clin 24: 102055.
+<a href="https://www.sciencedirect.com/science/article/pii/S2213158219304024">[Paper]</a></p>
 
 
 
