--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -46,7 +46,18 @@ author_profile: true
 <p>Puzniak RJ, <b>Ahmadi K</b>, Kaufmann J, Gouws A, Morland AB, Pestilli F, Hoffmann MB. Quantifying nerve decussation abnormalities in the optic chiasm. Neuroimage Clin 24: 102055.
 <a href="https://www.sciencedirect.com/science/article/pii/S2213158219304024">[Paper]</a></p>
 
+<h2>2017</h2>
+<p>Arngrim N, Hougaard A, <b>Ahmadi K</b>, Vestergaard MB, Schytz HW, Amin FM, Larsson HB, Olesen J, Hoffmann MB, Ashina M. Heterogenous migraine aura symptoms correlate with visual cortex functional magnetic resonance imaging responses. Annals of Neurology. 2017 Dec;82(6):925-39.
+<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/ana.25096">[Paper]</a></p>
 
+<p>Hoffmann MB, Thieme H, <b>Ahmadi K</b>. Potential of fMRI for the Functional Assessment of the
+Pathological Visual System. Klinische Monatsblätter für Augenheilkunde. 2017 Mar;234(03):303-10.
+<a href="https://www.thieme-connect.com/products/ejournals/abstract/10.1055/s-0043-103960">[Paper]</a></p>
+
+
+<h2>2015</h2>
+<p><b>Ahmadi K</b>, Pouretemad HR, Esfandiari J, Yoonessi A, Yoonessi A. Psychophysical evidence for impaired Magno, Parvo, and Konio-cellular pathways in dyslexic children. Journal of ophthalmic & vision research. 2015 Oct;10(4):433.
+<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4795394/">[Paper]</a></p>
 
 
 
