--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -60,9 +60,29 @@ Pathological Visual System. Klinische Monatsblätter für Augenheilkunde. 2017 M
 <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4795394/">[Paper]</a></p>
 
 
-
 <h1>Conferences</h1>
 <hr>
+<h2>2024</h2>
+<p><b>Ahmadi, K.</b>, Stawarczyk, D., Pfaffenrot, V., Gomes, C. A., Kashyap, S., Patai, Z., Norris, D. G., Axmacher, N.
+(2024). Laminar profiles of hippocampal subfields are differentially associated with navigation strategies. Organization for Human Brain Mapping (OHBM), Seoul, south Korea.</p>
+
+<p>Rau, E. M. B., Herweg, N. A., Heinen, R., <b>Ahmadi, K.</b>, Axmacher, N. (2024). Functions of the medial temporal lobe
+in memory and navigation of abstract conceptual spaces. Federation of European Neuroscience Societies (FENS),
+Vienna, Austria.</p>
+
+<p>Kashyap, S., Gomes, C. A., <b>Ahmadi, K.</b>, Axmacher, N., Uludag, K. (2024). A new proposed workflow for processing high spatial resolution MRI data with multiple sessions. Cognitive Computational Neuroscience (CCN), Boston
+, USA.</p>
+
+
+
+<h2>2023</h2>
+<h2>2022</h2>
+<h2>2021</h2>
+<h2>2020</h2>
+<h2>2019</h2>
+<h2>2018</h2>
+<h2>2017</h2>
+
 
 
 {% include base_path %}
