--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -60,7 +60,7 @@ Pathological Visual System. Klinische Monatsblätter für Augenheilkunde. 2017 M
 <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4795394/">[Paper]</a></p>
 
 
-<h1>Conferences</h1>
+<h1>Posetr Presentations</h1>
 <hr>
 <h2>2024</h2>
 <p><b>Ahmadi, K.</b>, Stawarczyk, D., Pfaffenrot, V., Gomes, C. A., Kashyap, S., Patai, Z., Norris, D. G., Axmacher, N.
@@ -73,15 +73,54 @@ Vienna, Austria.</p>
 <p>Kashyap, S., Gomes, C. A., <b>Ahmadi, K.</b>, Axmacher, N., Uludag, K. (2024). A new proposed workflow for processing high spatial resolution MRI data with multiple sessions. Cognitive Computational Neuroscience (CCN), Boston
 , USA.</p>
 
-
-
-<h2>2023</h2>
-<h2>2022</h2>
 <h2>2021</h2>
+<p><b>Ahmadi, K.</b>, Pereira, J. B., Berron, D., Vogel, J., Ingala, S., Strandberg, O. T., Janelidze, S., Barkhof, F., Pfeuffer, J.,
+Knutsson, L., van Westen, D., Mutsaerts, H. J., Palmqvist, S., Hansson, O. (2021). Tau and synaptic biomarkers but
+not amyloid-𝛽 are associated with cerebral perfusion in the Alzheimer’s disease spectrum. Alzheimer’s Association
+International Conference (AAIC), Virtual conference</p>
+
+<p>Cicognola, C., Janelidze, S., Van Westen, D., <b>Ahmadi, K.</b>, Hansson, O. (2021). Cerebrospinal fluid platelet-derived
+growth factor receptor beta measured in BioFinder-2: an early biomarker in the Alzheimer’s disease continuum?
+Clinical Trials on Alzheimer’s Disease (CTAD), Boston, USA.</p>
+
 <h2>2020</h2>
+<p>Puzniak, R. J., McPherson, B., <b>Ahmadi, K.</b>, Herbik, A., Kaufmann, J., Liebe, T., Gouws, A. D., Morland, A. B.,
+Gottlob, I., Hoffmann, M. B., Pestilli, F. (2020). Chiasmal malformations dataset: a unique neuroimaging testbed.
+Vision Science Society (VSS), Virtual conference.</p>
+
+<p>Hoffmann, M. B., Molz, B., Herbik, A., de Best, P., Raz, N., Gouws, A. D., <b>Ahmadi, K.</b>, Lowndes, R., Mclean, R.
+J., Kohl, S., Gottlob, I., Choritz, L., Maguire, J., Kanowski, M., Käsmann-Kellner, B., Wieland, I., Banin, E., Levin,
+N., Baseler, H. Morland, A. B. (2020). Visual cortex stability and plasticity in the absence of functional cones in
+achromatopsia. Vision Science Society (VSS), Virtual conference.</p>
+
 <h2>2019</h2>
-<h2>2018</h2>
+<p><b>Ahmadi, K.</b>, Fracasso, A., Puzniak, R. J., Gouws, A. D., Yakupov, R., Speck, O., Kaufmann, J., Pestilli, F., Dumoulin, S. O., Morland, A. B.,Hoffmann, M. B. (2019). Triple hemi-field input to the visual cortex in a patient with
+chiasmal hypoplasia. Organization for Human Brain Mapping (OHBM), Rome, Italy.</p>
+
+<p>Carvalho, J., <b>Ahmadi, K.</b>, Invernizzi, A., Hoffmann, M. B., Renken, R., Cornelissen, F. W. (2019). Micro-probing
+the visual cortex: high-resolution mapping of neuronal sub-populations. Organization for Human Brain Mapping
+(OHBM), Rome, Italy.</p>
+
+<p>• Puzniak, R. J., <b>Ahmadi, K.</b>, Kaufmann, J., Gouws, A. D., Morland, A. B., Pestilli, F., Hoffmann, M. B. (2019).
+Quantification of nerve decussation abnormalities in the optic chiasm. Organization for Human Brain Mapping
+(OHBM), Rome, Italy.</p>
+
+<p>Prabhakaran, G., Al-Nosairy, K. O., Tempelmann, C., <b>Ahmadi, K.</b>, Hoffmann, M. B. (2019). Brain activity in
+input-deprived visual cortex in glaucoma – no fMRI-evidence of plasticity. Organization for Human Brain Mapping
+(OHBM), Rome, Italy.</p>
+
 <h2>2017</h2>
+<p>• <b>Ahmadi, K.</b>, Fracasso, A., Gouws, A. D., Morland, A. B., Dumoulin, S. O., Hoffmann, M. B. (2017). Functional
+organization of the visual cortex in a unique case of achiasma. Society for neuroscience (SfN), Washington, D.C.,
+USA.</p>
+
+<p><b>Ahmadi, K.</b>, Fracasso, A., van Dijk, J. A., Kruijt, C., van Genderen, M., Dumoulin, S. O., & Hoffmann, M. B.
+(2017). Cortical plasticity in FHONDA: a new inherited visual system disorder. European conference on visual
+perception (ECVP), Berlin, Germany</p>
+
+<h2>2013</h2>
+<p><b>Ahmadi, K.</b>, Pouretemad, H. R., Esfandiari, J., Yoonessi, A. (2013). Investigation of magno, parvo and koniocellular
+pathways in children with dyslexia. International conference of cognitive sciences (ICCS), Tehran, Iran.</p>
 
 
 
