--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Talks and presentations"
+title: "Talks "
 permalink: /talks/
 author_profile: true
 ---
@@ -10,6 +10,25 @@ author_profile: true
 <p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
 
 {% endif %}
+
+<h2>2024</h2>
+<p><b>Ahmadi, K.</b>. Laminar profile of hippocampal subregions during spatial navigation. International Society for
+Magnetic Resonance in Medicine (ISMRM), Singapore, Singapore.</p>
+
+<h2>2022</h2>
+<p>Ahmadi, K.<b></b>. Tau accumulation is associated with fiber-specific white matter degeneration in Alzheimer’s
+disease. International Society for Magnetic Resonance in Medicine (ISMRM), London, England.</p>
+<p> <b>Ahmadi, K.</b>. Disentangling fiber-specific white matter alterations in relation to hallmarks of Alzheimer’s
+disease. Alzheimer’s Disease and Parkinson’s Disease (ADPD), Barcelona, Spain.</p>
+
+<p><b>Ahmadi, K.</b>. Altered cerebral blood perfusion in Alzheimer’s disease spectrum and its association with
+amyloid-𝛽 and tau pathology. Alzheimer’s Disease and Parkinson’s Disease (ADPD), Virtual conference.</p>
+
+<h2>2018</h2>
+<p><b>Ahmadi, K.</b>. Macroscopic and mesoscopic cortical organization in congenital visual pathway abnormalities. Brain-in-depth (BID) - Symposium on layer-dependent MRI, German Center for Neurodegenerative Diseases
+(DZNE), Magdeburg, Germany.</p>
+
+
 
 {% for post in site.talks reversed %}
   {% include archive-single-talk.html %}
