--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -12,8 +12,8 @@ author_profile: true
 {% endif %}
 
 <h2>2024</h2>
-<p><b>Ahmadi, K.</b>. Laminar profile of hippocampal subregions during spatial navigation. International Society for
-Magnetic Resonance in Medicine (ISMRM), Singapore, Singapore.</p>
+<p><b>Laminar profile of hippocampal subregions during spatial navigation. International Society for
+Magnetic Resonance in Medicine</b> (ISMRM), Singapore, Singapore.</p>
 
 <h2>2022</h2>
 <p>Ahmadi, K.<b></b>. Tau accumulation is associated with fiber-specific white matter degeneration in Alzheimer’s
