--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -16,18 +16,25 @@ author_profile: true
 Magnetic Resonance in Medicine</b> (ISMRM), Singapore, Singapore.</p>
 
 <h2>2022</h2>
-<p>Ahmadi, K.<b></b>. Tau accumulation is associated with fiber-specific white matter degeneration in Alzheimer’s
-disease. International Society for Magnetic Resonance in Medicine (ISMRM), London, England.</p>
-<p> <b>Ahmadi, K.</b>. Disentangling fiber-specific white matter alterations in relation to hallmarks of Alzheimer’s
-disease. Alzheimer’s Disease and Parkinson’s Disease (ADPD), Barcelona, Spain.</p>
+<p><b>Tau accumulation is associated with fiber-specific white matter degeneration in Alzheimer’s
+disease.</b> International Society for Magnetic Resonance in Medicine(ISMRM), London, England.</p>
 
-<p><b>Ahmadi, K.</b>. Altered cerebral blood perfusion in Alzheimer’s disease spectrum and its association with
-amyloid-𝛽 and tau pathology. Alzheimer’s Disease and Parkinson’s Disease (ADPD), Virtual conference.</p>
+<p><b>Disentangling fiber-specific white matter alterations in relation to hallmarks of Alzheimer’s
+disease.</b>  Alzheimer’s Disease and Parkinson’s Disease (ADPD), Barcelona, Spain.</p>
+
+<h2>2021</h2>
+<p><b> Altered cerebral blood perfusion in Alzheimer’s disease spectrum and its association with
+amyloid-𝛽 and tau pathology.</b>. Alzheimer’s Disease and Parkinson’s Disease (ADPD), Virtual conference.</p>
 
 <h2>2018</h2>
-<p><b>Ahmadi, K.</b>. Macroscopic and mesoscopic cortical organization in congenital visual pathway abnormalities. Brain-in-depth (BID) - Symposium on layer-dependent MRI, German Center for Neurodegenerative Diseases
+<p><b>Macroscopic and mesoscopic cortical organization in congenital visual pathway abnormalities.</b>  Brain-in-depth (BID) - Symposium on layer-dependent MRI, German Center for Neurodegenerative Diseases
 (DZNE), Magdeburg, Germany.</p>
 
+<p><b>Altered organization of the visual cortex in FHONDA syndrome.</b> 4th European Days of Albinism, Hurdal Vision and Activity Center, Oslo, Norway.</p>
+
+<h2>2016</h2>
+<p><b>Altered retino-cortical connections and visual cortex reorganization in the recently discovered
+FHONDA syndrome.</b> Society for neuroscience (SfN), San Diego, USA.</p>
 
 
 {% for post in site.talks reversed %}
