--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -13,8 +13,7 @@ author_profile: true
 
 <h2>2024</h2>
 <p><b>Laminar profile of hippocampal subregions during spatial navigation. International Society for
-Magnetic Resonance in Medicine</b></p>
-<p>(ISMRM), Singapore, Singapore</p>
+Magnetic Resonance in Medicine</b> (ISMRM), Singapore, Singapore</p>
 
 <h2>2022</h2>
 <p><b>Tau accumulation is associated with fiber-specific white matter degeneration in Alzheimer’s
