--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -6,6 +6,19 @@ author_profile: true
 ---
 I enjoy teaching as much as research and have always striven to build a classroom based on equity and respect. Further, I value problem-based learning to trigger intellectual curiosity and critical thinking in my students. A summary of my teaching activities is provided below.
 
+<h2>Aging, Dementia and Memory Disorders</h2>
+<p>Graduate Course, Ruhr University Bochum, 2024-present</p>
+<p>In a series of twelve interactive sessions, the students learn about the underlying mechanisms of cognitive decline in healthy and pathological aging.</p>
+
+
+<h2>fMRI: From Theory to Practice</h2>
+<p>Graduate Course, Ruhr University Bochum, 2022-present</p>
+<p>In this course, the students learn about physics of fMRI and gain hands-on experience with data analysis.</p></p>
+
+
+<h2>Neuroscience Journal Club</h2>
+<p>Graduate Course,Otto-von-Guericke University Magdeburg, 2016-2018</p>
+<p>This course was a literature review. Each student was asked to read a paper of their choice regarding application of neuroimaging methods in visual neuroscience and discuss the results with their peers. </p>
 {% include base_path %}
 
 {% for post in site.teaching reversed %}
